Update Rail and Road gradient and curve radius specifications

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -347,15 +347,15 @@
    "metadata": {},
    "source": [
     "- Highways\n",
-    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Curve radius $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Notes |\n",
+    "    |             | Gradient $ s $    | Curve radius $ R $         | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Notes |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ----- |\n",
     "    | -           |  $ \\leq  4  \\% $  |  $ \\geq  512 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq  90\\degree $ | $ \\geq 127\\degree $ | $ \\geq 152\\degree $ | $ \\geq 166\\degree $ | |\n",
     "    | Recommended |  $ \\leq  6  \\% $  |  $ \\geq  288 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | $ \\geq  97\\degree $ | $ \\geq 133\\degree $ | $ \\geq 155\\degree $ | |\n",
     "    | Soft Limit  |  $ \\leq  8  \\% $  |  $ \\geq  184 \\mathrm{m} $  |  $ \\simeq  80 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 111\\degree $ | $ \\geq 142\\degree $ | For ramps / In mountains |\n",
-    "    | -           |  $ \\leq  9  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
-    "    | Hard Limit  |  $ \\leq 10  \\% $  |  $ \\geq   32 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | -                   | -                   | For ramps / In mountains |\n",
+    "    | -           |  $ \\leq  8  \\% $  |  $ \\geq  120 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq 124\\degree $ | For ramps / In mountains |\n",
+    "    | Hard Limit  |  $ \\leq  8  \\% $  |  $ \\geq   32 \\mathrm{m} $  |  $ \\simeq  40 \\mathrm{km/h} $  | -                   | -                   | -                   | -                   | For ramps / In mountains |\n",
     "    \n",
     "    - $ \\theta_{d} $ refers to the angle displayed when building a 2-phase curve of $d$ - $d$ in game.\n",
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
@@ -364,7 +364,7 @@
     "      - According to the source,\n",
     "        $ R \\geq 1000 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq 140 \\mathrm{km/h} $; and\n",
     "        $ R \\geq  120 \\mathrm{m} $ for $ v_\\mathrm{max} \\simeq  60 \\mathrm{km/h} $.\n",
-    "      - ~~Assuming the radius of curvature limit $ R \\propto v_\\mathrm{max}^2 $,\n",
+    "      - ~~Assuming the Curve radius limit $ R \\propto v_\\mathrm{max}^2 $,\n",
     "        i.e. $ R \\approx v_\\mathrm{max}^2 / (30 \\mathrm{mh/km}) $ for lower  limit,\n",
     "        and  $ R \\approx v_\\mathrm{max}^2 / (20 \\mathrm{mh/km}) $ for higher limit~~.\n",
     "    - Source: [2024-08-23] (for $R$) https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0256301  \n",
@@ -403,9 +403,9 @@
    "metadata": {},
    "source": [
     "- Freight and old Passenger Railways\n",
-    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Curve radius $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    |             | Gradient $ s $    | Curve radius $ R $         | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
     "    | Recommended |  $ \\leq  1.5\\% $  |  $ \\geq  640 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | $ \\geq 158\\degree $ | $ \\geq 169\\degree $ | |\n",
     "    | Hard Limit  |  $ \\leq  3.5\\% $  |  $ \\geq  160 \\mathrm{m} $  |  $ \\simeq  60 \\mathrm{km/h} $  | -                   | -                   | $ \\geq 103\\degree $ | $ \\geq 137\\degree $ | Lithgow Zig Zag |\n",
@@ -429,9 +429,9 @@
     "    - Note: Liberties have been taken for the hard limit of $s$ due to steep terrain in the map. Also steeper is more fun.\n",
     "  - Length limit (for track intersections): $ > 500\\mathrm{m} $ (25 cars with 20m per car)\n",
     "- High Speed Railways\n",
-    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Curve radius $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    |             | Gradient $ s $    | Curve radius $ R $         | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
     "    | Recommended |  $ \\leq  3.5\\% $  |  $ \\geq 4000 \\mathrm{m} $  |  $ \\simeq 300 \\mathrm{km/h} $  | $ \\geq 166\\degree $ | $ \\geq 173\\degree $ | $ \\geq 177\\degree $ | $ \\geq 179\\degree $ | |\n",
     "    | Hard Limit  |  $ \\leq  4  \\% $  |  $ \\geq 3500 \\mathrm{m} $  |  $ \\simeq 250 \\mathrm{km/h} $  | $ \\geq 164\\degree $ | $ \\geq 172\\degree $ | $ \\geq 176\\degree $ | $ \\geq 178\\degree $ | |\n",
@@ -439,15 +439,17 @@
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways#\n",
     "    - Source: [2024-08-16] https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
     "- Metro / Subway / Passenger Railways\n",
-    "  - Gradient $ s $ and Radius of Curvature $ R $ limit:\n",
+    "  - Gradient $ s $ and Curve radius $ R $ limit:\n",
     "    \n",
-    "    |             | Gradient $ s $    | Radius of Curvature $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
+    "    |             | Gradient $ s $    | Curve radius $ R $  | Speed limit $ v_\\mathrm{max} $ | $ \\theta_\\mathrm{512m} $ | $ \\theta_\\mathrm{256m} $ | $ \\theta_\\mathrm{128m} $ | $ \\theta_\\mathrm{64m} $ | Real world examples |\n",
     "    | ----------- | :---------------: | :------------------------: | :----------------------------: | --- | --- | --- | --- | ------------------- |\n",
-    "    | Recommended |  $ \\leq  5.5\\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | -                   | -                   | $ \\geq   90\\degree $  | $ \\geq 127\\degree $ | [$ s $] Höllentalbahn (Black Forest), Germany;<br>[$ R $] Bay Area Rapid Transit, United States. |\n",
-    "    | Hard Limit  |  $ \\leq  7  \\% $  |  $ \\geq   64 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | -                     | $ \\geq  90\\degree $ | [$ s $] Bernina Railway, Switzerland;<br>[$ R $] Central line, London Underground, United Kingdom. |\n",
+    "    | Recommended |  $ \\leq  5.5\\% $  |  $ \\geq  448 \\mathrm{m} $  |  $ \\simeq 120 \\mathrm{km/h} $  | -                   | $ \\geq 121\\degree $ | $ \\geq   149\\degree $ | $ \\geq 164\\degree $ | [$ s $] Höllentalbahn (Black Forest), Germany;<br>[$ R $] (Assumed tilting trains; See https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant ) |\n",
+    "    | Hard Limit  |  $ \\leq  7  \\% $  |  $ \\geq  128 \\mathrm{m} $  |  $ \\simeq 100 \\mathrm{km/h} $  | -                   | -                   | $ \\geq   90\\degree $  | $ \\geq 127\\degree $ | [$ s $] Bernina Railway, Switzerland;<br>[$ R $] Bay Area Rapid Transit, United States. |\n",
     "    \n",
     "  - Source: [2024-08-16] ($ s $) https://en.wikipedia.org/wiki/List_of_steepest_gradients_on_adhesion_railways\n",
     "  - Source: [2024-08-17] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#List_of_selected_minimum_curve_radii\n",
+    "    - Note: $R$ can go as low as 64m as seen in Central line, London Underground, United Kingdom; but that's probably too tight.\n",
+    "  - Source: [2024-08-27] ($ R $) https://en.wikipedia.org/wiki/Minimum_railway_curve_radius#Speed_and_cant\n",
     "- Trams\n",
     "  - Gradient $ s $ limit:\n",
     "    \n",
@@ -469,13 +471,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(512, np.float64(27.0)), (256, np.float64(51.0)), (128, np.float64(87.0)), (64, np.float64(124.0))]\n"
+      "[(512, np.float64(83.0)), (256, np.float64(121.0)), (128, np.float64(149.0)), (64, np.float64(164.0))]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.float64(164.0)"
+       "np.float64(127.0)"
       ]
      },
      "execution_count": 2,
@@ -486,8 +488,8 @@
    "source": [
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
-    "print([(d, theta_deg(R=120, d=d)) for d in (512, 256, 128, 64)])\n",
-    "theta_deg(R=216, d=32)"
+    "print([(d, theta_deg(R=448, d=d)) for d in (512, 256, 128, 64)])\n",
+    "theta_deg(R=160, d=80)"
    ]
   },
   {
@@ -515,7 +517,7 @@
    "id": "b24e4eee-35e8-427c-b0a6-e16126855085",
    "metadata": {},
    "source": [
-    "- Brush   3: Altitude $<$0m; Beaches\n",
+    "- Brush   3: Altitude $<$100m; Beaches\n",
     "  - Palm Trees (Coconut, Florida, Royal)\n",
     "- Brush W-D: Altitude  100m to  600m\n",
     "  - Briches\n",
