Added acronym for parking lanes and motorways

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -205,6 +205,7 @@
     "|    H    | **H**omo/Piediranto | Human/Pedestrian    | $\\geq$ 3.5m |\n",
     "|    B    | **B**iciklo         | Bike                |        ?    |\n",
     "|    A    | **A**ŭtomobilo      | Car                 |        3m   |\n",
+    "|    J    | parke**J**o         | Parking Space       | $\\geq$ 2m   |\n",
     "|    T    | **T**ransporto<br>(Buso, Tramo)   | Transit<br>(Bus, Tram)         |        3m   |\n",
     "|    E    | f**E**rvojo/m**E**troo | Railway/Metro    |        4m   |\n",
     "|    V    | **V**agonaro/Trajno | Train               |        4m   |\n",
@@ -241,14 +242,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 \t F J O U Z\n"
+      "4 \t F O U Z\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Ascii Letters left:\"\"\"\n",
     "all__letters = \"A B C D E F G H I J K L M N O P R S T U V Z\".split()\n",
-    "used_letters = \"N S R K L C D P M  H B A T E V G I\".split()\n",
+    "used_letters = \"N S R K L C D P M  H B A J T E V G I\".split()\n",
     "left_letters = [a for a in all__letters if a not in used_letters]\n",
     "print(len(left_letters), '\\t', ' '.join(left_letters))"
    ]
@@ -271,7 +272,7 @@
     "\n",
     "Note that the letters are overlapping other acronyms in other categories - and they are not necessarily the same. \n",
     "\n",
-    "| Siglo<br>Acronym | Strateta Tipo<br>(en esperanto) | Lane Type<br>(in English) | Notes |\n",
+    "| Siglo<br>Acronym | Nomo<br>(en esperanto) | Lane Type<br>(in English) | Notes |\n",
     "| :-----: | ------------------- | ------------------- | ----------- |\n",
     "|    B    | **B**uso            | Bus                 | |\n",
     "|    T    | **T**ramo           | Tram                | |\n",
@@ -280,8 +281,10 @@
     "|    P    | **P**ramo           | Ferry (Intracity)   | |\n",
     "|    Sx   | **Ŝ**ipo            | Ship (Intercity)    | |\n",
     "|    A    | **A**viadilo        | Airplane            | |\n",
-    "|    K-   | **K**argo-          | Cargo-              | |\n",
+    "|    Ux   | a**Ŭ**tovojo        | Motorway            | |\n",
     "|    H-   | **H**omo-/Pasaĝero- | Human-/Passenger-   | |\n",
+    "|    K-   | **K**argo-          | Cargo-              | |\n",
+    "\n",
     "\n",
     "\n",
     "H prefix is usually omitted.\n",
@@ -290,6 +293,7 @@
     "\n",
     "- Bus route 123: B123 (short for HB123)\n",
     "- Train line 3: V3 (short for HV3)\n",
+    "- Motorway 2 N->S: Ux2-M (M for Negative)\n",
     "- Cargo train line 1: KV1\n",
     "- Cargo barge route 4: KP4\n",
     "- Cargo container ship route 2: KSx2\n",
