--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -242,14 +242,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 \t F O U Z\n"
+      "3 \t F U Z\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Ascii Letters left:\"\"\"\n",
     "all__letters = \"A B C D E F G H I J K L M N O P R S T U V Z\".split()\n",
-    "used_letters = \"N S R K L C D P M  H B A J T E V G I\".split()\n",
+    "used_letters = \"N S R K L C D P M  H B A J T E V G O I\".split()\n",
     "left_letters = [a for a in all__letters if a not in used_letters]\n",
     "print(len(left_letters), '\\t', ' '.join(left_letters))"
    ]
@@ -272,14 +272,14 @@
     "\n",
     "Note that the letters are overlapping other acronyms in other categories - and they are not necessarily the same. \n",
     "\n",
-    "| Siglo<br>Acronym | Nomo<br>(en esperanto) | Lane Type<br>(in English) | Notes |\n",
+    "| Siglo<br>Acronym | Nomo<br>(en esperanto) | Name<br>(in English) | Rimarkoj<br>Remarks |\n",
     "| :-----: | ------------------- | ------------------- | ----------- |\n",
     "|    B    | **B**uso            | Bus                 | |\n",
-    "|    T    | **T**ramo           | Tram                | |\n",
-    "|    E    | f**E**rvojo/m**E**troo | Railway/Metro<br>Monorail<br>Train (Intracity) | |\n",
-    "|    V    | **V**agonaro/Trajno | Train (Intercity, high speed)   | |\n",
-    "|    P    | **P**ramo           | Ferry (Intracity)   | |\n",
-    "|    Sx   | **Ŝ**ipo            | Ship (Intercity)    | |\n",
+    "|    T    | **T**ramo           | Tram                | Regiona<br>Regional |\n",
+    "|    E    | f**E**rvojo/m**E**troo | Railway/Metro<br>Monorail<br>Train | Regiona<br>Regional |\n",
+    "|    V    | **V**agonaro/Trajno | Train (high speed)  | Interurba<br>Intercity |\n",
+    "|    P    | **P**ramo           | Ferry               | Regiona<br>Regional |\n",
+    "|    Sx   | **Ŝ**ipo            | Ship                | Interurba<br>Intercity |\n",
     "|    A    | **A**viadilo        | Airplane            | |\n",
     "|    Ux   | a**Ŭ**tovojo        | Motorway            | |\n",
     "|    H-   | **H**omo-/Pasaĝero- | Human-/Passenger-   | |\n",
@@ -481,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(127.0)"
+       "(np.float64(127.0), np.float64(321.83610852325234))"
       ]
      },
      "execution_count": 2,
@@ -492,8 +492,9 @@
    "source": [
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
+    "get_R = lambda theta_deg, d: np.tan(theta_deg/2/180*np.pi)*d\n",
     "print([(d, theta_deg(R=448, d=d)) for d in (512, 256, 128, 64)])\n",
-    "theta_deg(R=160, d=80)"
+    "theta_deg(R=160, d=80), get_R(theta_deg=103, d=256)"
    ]
   },
   {
