Added official religion info.

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -107,6 +107,7 @@
     "| :---------------- | ---- |\n",
     "| City Background   | Planned New Capital |\n",
     "| Official Language | Esperanto (transitioning from English in the next 20 years) |\n",
+    "| Official Religion | Pastafarianismo |\n",
     "| Country Leader    | Reĝino Serena de Omnijo |\n",
     "| City Designers    | Ĉuĉjo la Arkitekto  kaj  Ĝejnjo la Suverenino |\n"
    ]
@@ -277,7 +278,7 @@
     "|    B    | **B**uso            | Bus                 | |\n",
     "|    T    | **T**ramo           | Tram                | Regiona<br>Regional |\n",
     "|    E    | f**E**rvojo/m**E**troo | Railway/Metro<br>Monorail<br>Train | Regiona<br>Regional |\n",
-    "|    V    | **V**agonaro/Trajno | Train (high speed)  | Interurba<br>Intercity |\n",
+    "|    V    | **V**agonaro/Trajno | Train               | Grandrapida Interurba<br>High-speed Intercity |\n",
     "|    P    | **P**ramo           | Ferry               | Regiona<br>Regional |\n",
     "|    Sx   | **Ŝ**ipo            | Ship                | Interurba<br>Intercity |\n",
     "|    A    | **A**viadilo        | Airplane            | |\n",
@@ -292,7 +293,7 @@
     "Examples:\n",
     "\n",
     "- Bus route 123: B123 (short for HB123)\n",
-    "- Train line 3: V3 (short for HV3)\n",
+    "- High-speed Train line 3: V3 (short for HV3)\n",
     "- Motorway 2 N->S: Ux2-M (M for Negative)\n",
     "- Cargo train line 1: KV1\n",
     "- Cargo barge route 4: KP4\n",
