--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "\n",
     "\n",
-    "#### Stratetoj<br>Lanes\n"
+    "#### Vojoj kaj Stratetoj<br>Roads and Lanes\n"
    ]
   },
   {
@@ -205,8 +205,8 @@
     "| :-----: | ------------------- | ------------------- | :---------: |\n",
     "|    H    | **H**omo/Piediranto | Human/Pedestrian    | $\\geq$ 3.5m |\n",
     "|    B    | **B**iciklo         | Bike                |        ?    |\n",
-    "|    A    | **A**ŭtomobilo      | Car                 |        3m   |\n",
     "|    J    | parke**J**o         | Parking Space       | $\\geq$ 2m   |\n",
+    "|    A    | **A**ŭtomobilo      | Car                 |        3m   |\n",
     "|    T    | **T**ransporto<br>(Buso, Tramo)   | Transit<br>(Bus, Tram)         |        3m   |\n",
     "|    E    | f**E**rvojo/m**E**troo | Railway/Metro    |        4m   |\n",
     "|    V    | **V**agonaro/Trajno | Train               |        4m   |\n",
