Added System of Units info

--- a/OmniCentrajSpecifoj.ipynb
+++ b/OmniCentrajSpecifoj.ipynb
@@ -328,6 +328,173 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35ac4983-f113-4d7b-b4ca-f0e627bc82ae",
+   "metadata": {},
+   "source": [
+    "### Normoj<br>Standards\n",
+    "\n",
+    "-------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac114edb-1d90-402c-a27d-d1627741e4e5",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "#### Sistemo de Unuoj<br>System of Units\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f15d303e-0f26-4f18-a0e8-9b78ae9f93e8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "(Detailed descriptions coming soon)\n",
+    "\n",
+    "Based on [Planck natural units](https://en.wikipedia.org/wiki/Natural_units#Planck_units).\n",
+    "\n",
+    "Track gauge in *RdO* for trains, metros, and trams are the same:\n",
+    "$ d_\\mathrm{gauge} \\equiv \\pi e \\, 2^{113} \\, l_P = 1.4333 \\mathrm{m} $,\n",
+    "which is compatible with the standard gauge ($ 1.4351 \\mathrm{m} $)\n",
+    "with a difference of only $ 2 \\mathrm{mm}$.\n",
+    "(Hopefully that's small enough...)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Note:\n",
+    "$l_P \\equiv \\sqrt{\\frac{\\hbar G}{c^3}}$ is the [Planck length](https://simple.wikipedia.org/wiki/Planck_length#):\n",
+    "$c$ is the speed of light,\n",
+    "$\\hbar$ is the reduced Planck constant, and\n",
+    "$G$ is the gravitational constant.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Code illustrations\n",
+    "\n",
+    "```python\n",
+    "    # natural units\n",
+    "    # https://en.wikipedia.org/wiki/Natural_units#Planck_units\n",
+    "    \n",
+    "    from astropy import units\n",
+    "    from astropy import constants as const\n",
+    "    from numpy import pi\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    \n",
+    "    u_nat : dict[str, units.UnitBase|units.Quantity] = {}\n",
+    "    u_nat['dist'] = ((const.hbar * const.G / const.c**3)**0.5).si\n",
+    "    u_nat['mass'] = ((const.hbar * const.c / const.G   )**0.5).si\n",
+    "    u_nat['time'] = ((const.hbar * const.G / const.c**5)**0.5).si\n",
+    "    u_nat['temp'] = ((const.hbar * const.c**5 / const.G)**0.5 / const.k_B).si\n",
+    "    \n",
+    "    # exponent\n",
+    "    u_rdo_exp : dict[str, int] = {k: np.ceil(-np.log2(v.si.value)) for k, v in u_nat.items()} # default\n",
+    "    u_rdo_exp['dist'] = 115   # = 5 * 23\n",
+    "    u_rdo_exp['mass'] = 24    # = 2**3 * 3\n",
+    "    u_rdo_exp['time'] = 144   # = 2**4 * 3**2\n",
+    "    u_rdo_exp['temp'] =-107\n",
+    "    # coefficient\n",
+    "    u_rdo_eff : dict[str, float] = {k: 1.0 for k, v in u_nat.items()}\n",
+    "    u_rdo_eff['dist'] = 1.5\n",
+    "    \n",
+    "    u_rdo = {k: u_nat[k] * u_rdo_eff[k] * 2**u_rdo_exp[k] for k in u_nat.keys()}\n",
+    "\n",
+    "    \n",
+    "    track_standard_gauge = (4*units.imperial.foot + 8.5 * units.imperial.inch).si\n",
+    "    track_rdo_gauge = np.pi*np.e/6 * u_rdo['dist'] # i.e., np.pi * np.e * 2**113 * u_nat['dist']\n",
+    "    temp_refs_C = [0., 36.8, 100.] * units.deg_C\n",
+    "    temp_refs_K = temp_refs_C.to(units.K, equivalencies=units.equivalencies.temperature())\n",
+    "    \n",
+    "    \n",
+    "    print(\"\\n\".join([f\"{k:4}: unit = {u_rdo[k]:6.4f} \\t ==  {u_rdo_eff[k]:3.2f} * 2**{u_rdo_exp[k]: 4d} * [naturalUnit: {v:.4e}]\" for k, v in u_nat.items()]))\n",
+    "    print()\n",
+    "    print(f\"dist: {track_standard_gauge = } is {track_standard_gauge.to(u_rdo['dist']):6.4f}\")\n",
+    "    print(f\"dist: proposed new guage: {track_rdo_gauge:6.4f}\")\n",
+    "    print(f\"temp: {temp_refs_C} is {temp_refs_K}, which is {temp_refs_K.to(u_rdo['temp'])} \")\n",
+    "```\n",
+    "\n",
+    "Results\n",
+    "\n",
+    "```python\n",
+    "    dist: unit = 1.0070 m \t ==  1.50 * 2** 115 * [naturalUnit: 1.6163e-35 m]\n",
+    "    mass: unit = 0.3651 kg \t ==  1.00 * 2**  24 * [naturalUnit: 2.1764e-08 kg]\n",
+    "    time: unit = 1.2023 s \t ==  1.00 * 2** 144 * [naturalUnit: 5.3912e-44 s]\n",
+    "    temp: unit = 0.8732 K \t ==  1.00 * 2**-107 * [naturalUnit: 1.4168e+32 K]\n",
+    "    \n",
+    "    dist: track_standard_gauge = <Quantity 1.4351 m> is 1.4251 1.00705 m\n",
+    "    dist: proposed new guage: 1.4333 m\n",
+    "    temp: [  0.   36.8 100. ] deg_C is [273.15 309.95 373.15] K, which is [312.82902964 354.97476748 427.35549116] 0.873161 K\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bd54c465-d9b1-4f99-9624-3c581a0a1e59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dist: unit = 1.0070 m \t ==  1.50 * 2** 115 * [naturalUnit: 1.6163e-35 m]\n",
+      "mass: unit = 0.3651 kg \t ==  1.00 * 2**  24 * [naturalUnit: 2.1764e-08 kg]\n",
+      "time: unit = 1.2023 s \t ==  1.00 * 2** 144 * [naturalUnit: 5.3912e-44 s]\n",
+      "temp: unit = 0.8732 K \t ==  1.00 * 2**-107 * [naturalUnit: 1.4168e+32 K]\n",
+      "\n",
+      "dist: track_standard_gauge = <Quantity 1.4351 m> is 1.4251 1.00705 m\n",
+      "dist: proposed new guage: 1.4333 m\n",
+      "temp: [  0.   36.8 100. ] deg_C is [273.15 309.95 373.15] K, which is [312.82902964 354.97476748 427.35549116] 0.873161 K \n"
+     ]
+    }
+   ],
+   "source": [
+    "# natural units\n",
+    "# https://en.wikipedia.org/wiki/Natural_units#Planck_units\n",
+    "\n",
+    "from astropy import units\n",
+    "from astropy import constants as const\n",
+    "from numpy import pi\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "u_nat : dict[str, units.UnitBase|units.Quantity] = {}\n",
+    "u_nat['dist'] = ((const.hbar * const.G / const.c**3)**0.5).si\n",
+    "u_nat['mass'] = ((const.hbar * const.c / const.G   )**0.5).si\n",
+    "u_nat['time'] = ((const.hbar * const.G / const.c**5)**0.5).si\n",
+    "u_nat['temp'] = ((const.hbar * const.c**5 / const.G)**0.5 / const.k_B).si\n",
+    "\n",
+    "# exponent\n",
+    "u_rdo_exp : dict[str, int] = {k: np.ceil(-np.log2(v.si.value)) for k, v in u_nat.items()} # default\n",
+    "u_rdo_exp['dist'] = 115   # = 5 * 23\n",
+    "u_rdo_exp['mass'] = 24    # = 2**3 * 3\n",
+    "u_rdo_exp['time'] = 144   # = 2**4 * 3**2\n",
+    "u_rdo_exp['temp'] =-107\n",
+    "# coefficient\n",
+    "u_rdo_eff : dict[str, float] = {k: 1.0 for k, v in u_nat.items()}\n",
+    "u_rdo_eff['dist'] = 1.5\n",
+    "\n",
+    "u_rdo = {k: u_nat[k] * u_rdo_eff[k] * 2**u_rdo_exp[k] for k in u_nat.keys()}\n",
+    "\n",
+    "\n",
+    "track_standard_gauge = (4*units.imperial.foot + 8.5 * units.imperial.inch).si\n",
+    "track_rdo_gauge = np.pi*np.e/6 * u_rdo['dist'] # i.e., np.pi * np.e * 2**113 * u_nat['dist']\n",
+    "temp_refs_C = [0., 36.8, 100.] * units.deg_C\n",
+    "temp_refs_K = temp_refs_C.to(units.K, equivalencies=units.equivalencies.temperature())\n",
+    "\n",
+    "\n",
+    "print(\"\\n\".join([f\"{k:4}: unit = {u_rdo[k]:6.4f} \\t ==  {u_rdo_eff[k]:3.2f} * 2**{u_rdo_exp[k]: 4d} * [naturalUnit: {v:.4e}]\" for k, v in u_nat.items()]))\n",
+    "print()\n",
+    "print(f\"dist: {track_standard_gauge = } is {track_standard_gauge.to(u_rdo['dist']):6.4f}\")\n",
+    "print(f\"dist: proposed new guage: {track_rdo_gauge:6.4f}\")\n",
+    "print(f\"temp: {temp_refs_C} is {temp_refs_K}, which is {temp_refs_K.to(u_rdo['temp'])} \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "62423738-ce1c-4ace-8b67-4668b1192cc9",
    "metadata": {},
    "source": [
@@ -419,7 +586,7 @@
     "      i.e., $ \\theta_\\mathrm{512m} $ is the angle displayed in game when building a curve with 1 bend and the shorter one of the two arms of the curve is at least 512m.\n",
     "    - Angle $ \\theta_{d} $ equation:\n",
     "      $ \\theta_{d} = 2 \\tan^{-1}{\\frac{R}{d}} $\n",
-    "      ```\n",
+    "      ```python\n",
     "          # python code\n",
     "          import numpy as np\n",
     "          # Remember to translate radian into degree\n",
@@ -468,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4c9f4914-d660-406c-bf5c-f650834d3886",
    "metadata": {},
    "outputs": [
@@ -476,16 +643,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(512, np.float64(83.0)), (256, np.float64(121.0)), (128, np.float64(149.0)), (64, np.float64(164.0))]\n"
+      "[(512, np.float64(173.0)), (256, np.float64(177.0)), (128, np.float64(179.0)), (64, np.float64(180.0))]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(np.float64(127.0), np.float64(321.83610852325234))"
+       "(np.float64(169.0), np.float64(321.83610852325234))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,8 +661,8 @@
     "import numpy as np\n",
     "theta_deg = lambda R, d: np.ceil(2*np.atan(R/d)/np.pi*180)\n",
     "get_R = lambda theta_deg, d: np.tan(theta_deg/2/180*np.pi)*d\n",
-    "print([(d, theta_deg(R=448, d=d)) for d in (512, 256, 128, 64)])\n",
-    "theta_deg(R=160, d=80), get_R(theta_deg=103, d=256)"
+    "print([(d, theta_deg(R=8000, d=d)) for d in (512, 256, 128, 64)])\n",
+    "theta_deg(R=4000, d=396), get_R(theta_deg=103, d=256)"
    ]
   },
   {
@@ -635,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "78941f55-85a0-4f78-880b-58494eda11b7",
    "metadata": {},
    "outputs": [
@@ -648,7 +815,7 @@
        "<Quantity 3505.2 m>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
